# checker

./: .gitignore  Jenkinsfile  README.md  azure-pipelines.yml  deployment.yaml  docker-compose.yml  service.yaml
backend/: Dockerfile  main.py  pyproject.toml
backend/app/: api.py  check_similarity.py  openAIAPIcalls.py
backend/app/tests/: test_check_similarity.py
frontend/: Dockerfile  package.json
frontend/src/: index.js
frontend/src/components/: Checker.jsx  Header.jsx
