[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["sanikemppainen <sani.kemppainen@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
openai = "^0.28.0"
python-dotenv = "^1.0.0"
spacy = "^3.6.1"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
